// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`results  with contexts not wrapped in \`response\` retrieves records 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "children": [
          {
            "children": [
              {
                "filterOnly": true,
                "key": "terms",
                "type": "terms_stats",
              },
              {
                "filterOnly": true,
                "key": "results",
                "type": "results",
              },
            ],
            "filterOnly": true,
            "key": "root",
          },
          {
            "context": {
              "response": {
                "results": [
                  {
                    "_source": {
                      "name": "record1",
                    },
                  },
                  {
                    "_source": {
                      "name": "record2",
                    },
                  },
                  {
                    "_source": {
                      "name": "record3",
                    },
                  },
                ],
                "totalRecords": 3,
              },
            },
            "highlight": false,
            "include": [
              "a",
              "b",
              "c",
            ],
            "key": "results",
            "page": 1,
            "pageSize": 1,
            "sortDir": "desc",
            "sortField": "a",
            "totalPages": 1,
            "type": "results",
          },
        ],
        "join": "and",
        "key": "root-parent",
        "schema": undefined,
        "type": "group",
      },
    ],
    [
      {
        "children": [
          {
            "children": [
              {
                "filterOnly": true,
                "key": "terms",
                "type": "terms_stats",
              },
              {
                "filterOnly": true,
                "key": "results",
                "type": "results",
              },
            ],
            "filterOnly": true,
            "key": "root",
          },
          {
            "context": {
              "response": {
                "results": [
                  {
                    "_source": {
                      "name": "record1",
                    },
                  },
                  {
                    "_source": {
                      "name": "record2",
                    },
                  },
                  {
                    "_source": {
                      "name": "record3",
                    },
                  },
                ],
                "totalRecords": 3,
              },
            },
            "highlight": false,
            "include": [
              "a",
              "b",
              "c",
            ],
            "key": "results",
            "page": 1,
            "pageSize": 3,
            "skipCount": true,
            "sortDir": "desc",
            "sortField": "a",
            "totalPages": 1,
            "type": "results",
          },
        ],
        "join": "and",
        "key": "root-parent",
        "schema": undefined,
        "type": "group",
      },
    ],
    [
      {
        "children": [
          {
            "children": [
              {
                "filterOnly": true,
                "key": "terms",
                "type": "terms_stats",
              },
              {
                "filterOnly": true,
                "key": "results",
                "type": "results",
              },
            ],
            "filterOnly": true,
            "key": "root",
          },
          {
            "context": {
              "response": {
                "results": [
                  {
                    "_source": {
                      "name": "record1",
                    },
                  },
                  {
                    "_source": {
                      "name": "record2",
                    },
                  },
                  {
                    "_source": {
                      "name": "record3",
                    },
                  },
                ],
                "totalRecords": 3,
              },
            },
            "highlight": false,
            "include": [
              "a",
              "b",
              "c",
            ],
            "key": "results",
            "page": 2,
            "pageSize": 3,
            "skipCount": true,
            "sortDir": "desc",
            "sortField": "a",
            "totalPages": 1,
            "type": "results",
          },
        ],
        "join": "and",
        "key": "root-parent",
        "schema": undefined,
        "type": "group",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": {
        "children": [
          {
            "children": [
              {
                "filterOnly": true,
                "key": "terms",
                "type": "terms_stats",
              },
              {
                "filterOnly": true,
                "key": "results",
                "type": "results",
              },
            ],
            "filterOnly": true,
            "key": "root",
          },
          {
            "context": {
              "response": {
                "results": [
                  {
                    "_source": {
                      "name": "record1",
                    },
                  },
                  {
                    "_source": {
                      "name": "record2",
                    },
                  },
                  {
                    "_source": {
                      "name": "record3",
                    },
                  },
                ],
                "totalRecords": 3,
              },
            },
            "highlight": false,
            "include": [
              "a",
              "b",
              "c",
            ],
            "key": "results",
            "page": 1,
            "pageSize": 1,
            "sortDir": "desc",
            "sortField": "a",
            "totalPages": 1,
            "type": "results",
          },
        ],
        "join": "and",
        "key": "root-parent",
        "schema": undefined,
        "type": "group",
      },
    },
    {
      "type": "return",
      "value": {
        "children": [
          {
            "children": [
              {
                "filterOnly": true,
                "key": "terms",
                "type": "terms_stats",
              },
              {
                "filterOnly": true,
                "key": "results",
                "type": "results",
              },
            ],
            "filterOnly": true,
            "key": "root",
          },
          {
            "context": {
              "response": {
                "results": [
                  {
                    "_source": {
                      "name": "record1",
                    },
                  },
                  {
                    "_source": {
                      "name": "record2",
                    },
                  },
                  {
                    "_source": {
                      "name": "record3",
                    },
                  },
                ],
                "totalRecords": 3,
              },
            },
            "highlight": false,
            "include": [
              "a",
              "b",
              "c",
            ],
            "key": "results",
            "page": 1,
            "pageSize": 3,
            "skipCount": true,
            "sortDir": "desc",
            "sortField": "a",
            "totalPages": 1,
            "type": "results",
          },
        ],
        "join": "and",
        "key": "root-parent",
        "schema": undefined,
        "type": "group",
      },
    },
    {
      "type": "return",
      "value": {
        "children": [
          {
            "children": [
              {
                "filterOnly": true,
                "key": "terms",
                "type": "terms_stats",
              },
              {
                "filterOnly": true,
                "key": "results",
                "type": "results",
              },
            ],
            "filterOnly": true,
            "key": "root",
          },
          {
            "context": {
              "response": {
                "results": [
                  {
                    "_source": {
                      "name": "record1",
                    },
                  },
                  {
                    "_source": {
                      "name": "record2",
                    },
                  },
                  {
                    "_source": {
                      "name": "record3",
                    },
                  },
                ],
                "totalRecords": 3,
              },
            },
            "highlight": false,
            "include": [
              "a",
              "b",
              "c",
            ],
            "key": "results",
            "page": 2,
            "pageSize": 3,
            "skipCount": true,
            "sortDir": "desc",
            "sortField": "a",
            "totalPages": 1,
            "type": "results",
          },
        ],
        "join": "and",
        "key": "root-parent",
        "schema": undefined,
        "type": "group",
      },
    },
  ],
}
`;

exports[`results  with contexts wrapped in \`response\` retrieves records 1`] = `
[MockFunction] {
  "calls": [
    [
      {
        "children": [
          {
            "children": [
              {
                "filterOnly": true,
                "key": "terms",
                "type": "terms_stats",
              },
              {
                "filterOnly": true,
                "key": "results",
                "type": "results",
              },
            ],
            "filterOnly": true,
            "key": "root",
          },
          {
            "context": {
              "results": [
                {
                  "_source": {
                    "name": "record1",
                  },
                },
                {
                  "_source": {
                    "name": "record2",
                  },
                },
                {
                  "_source": {
                    "name": "record3",
                  },
                },
              ],
              "totalRecords": 3,
            },
            "highlight": false,
            "include": [
              "a",
              "b",
              "c",
            ],
            "key": "results",
            "page": 1,
            "pageSize": 1,
            "sortDir": "desc",
            "sortField": "a",
            "totalPages": 1,
            "type": "results",
          },
        ],
        "join": "and",
        "key": "root-parent",
        "schema": undefined,
        "type": "group",
      },
    ],
    [
      {
        "children": [
          {
            "children": [
              {
                "filterOnly": true,
                "key": "terms",
                "type": "terms_stats",
              },
              {
                "filterOnly": true,
                "key": "results",
                "type": "results",
              },
            ],
            "filterOnly": true,
            "key": "root",
          },
          {
            "context": {
              "results": [
                {
                  "_source": {
                    "name": "record1",
                  },
                },
                {
                  "_source": {
                    "name": "record2",
                  },
                },
                {
                  "_source": {
                    "name": "record3",
                  },
                },
              ],
              "totalRecords": 3,
            },
            "highlight": false,
            "include": [
              "a",
              "b",
              "c",
            ],
            "key": "results",
            "page": 1,
            "pageSize": 3,
            "skipCount": true,
            "sortDir": "desc",
            "sortField": "a",
            "totalPages": 1,
            "type": "results",
          },
        ],
        "join": "and",
        "key": "root-parent",
        "schema": undefined,
        "type": "group",
      },
    ],
    [
      {
        "children": [
          {
            "children": [
              {
                "filterOnly": true,
                "key": "terms",
                "type": "terms_stats",
              },
              {
                "filterOnly": true,
                "key": "results",
                "type": "results",
              },
            ],
            "filterOnly": true,
            "key": "root",
          },
          {
            "context": {
              "results": [
                {
                  "_source": {
                    "name": "record1",
                  },
                },
                {
                  "_source": {
                    "name": "record2",
                  },
                },
                {
                  "_source": {
                    "name": "record3",
                  },
                },
              ],
              "totalRecords": 3,
            },
            "highlight": false,
            "include": [
              "a",
              "b",
              "c",
            ],
            "key": "results",
            "page": 2,
            "pageSize": 3,
            "skipCount": true,
            "sortDir": "desc",
            "sortField": "a",
            "totalPages": 1,
            "type": "results",
          },
        ],
        "join": "and",
        "key": "root-parent",
        "schema": undefined,
        "type": "group",
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": {
        "children": [
          {
            "children": [
              {
                "filterOnly": true,
                "key": "terms",
                "type": "terms_stats",
              },
              {
                "filterOnly": true,
                "key": "results",
                "type": "results",
              },
            ],
            "filterOnly": true,
            "key": "root",
          },
          {
            "context": {
              "results": [
                {
                  "_source": {
                    "name": "record1",
                  },
                },
                {
                  "_source": {
                    "name": "record2",
                  },
                },
                {
                  "_source": {
                    "name": "record3",
                  },
                },
              ],
              "totalRecords": 3,
            },
            "highlight": false,
            "include": [
              "a",
              "b",
              "c",
            ],
            "key": "results",
            "page": 1,
            "pageSize": 1,
            "sortDir": "desc",
            "sortField": "a",
            "totalPages": 1,
            "type": "results",
          },
        ],
        "join": "and",
        "key": "root-parent",
        "schema": undefined,
        "type": "group",
      },
    },
    {
      "type": "return",
      "value": {
        "children": [
          {
            "children": [
              {
                "filterOnly": true,
                "key": "terms",
                "type": "terms_stats",
              },
              {
                "filterOnly": true,
                "key": "results",
                "type": "results",
              },
            ],
            "filterOnly": true,
            "key": "root",
          },
          {
            "context": {
              "results": [
                {
                  "_source": {
                    "name": "record1",
                  },
                },
                {
                  "_source": {
                    "name": "record2",
                  },
                },
                {
                  "_source": {
                    "name": "record3",
                  },
                },
              ],
              "totalRecords": 3,
            },
            "highlight": false,
            "include": [
              "a",
              "b",
              "c",
            ],
            "key": "results",
            "page": 1,
            "pageSize": 3,
            "skipCount": true,
            "sortDir": "desc",
            "sortField": "a",
            "totalPages": 1,
            "type": "results",
          },
        ],
        "join": "and",
        "key": "root-parent",
        "schema": undefined,
        "type": "group",
      },
    },
    {
      "type": "return",
      "value": {
        "children": [
          {
            "children": [
              {
                "filterOnly": true,
                "key": "terms",
                "type": "terms_stats",
              },
              {
                "filterOnly": true,
                "key": "results",
                "type": "results",
              },
            ],
            "filterOnly": true,
            "key": "root",
          },
          {
            "context": {
              "results": [
                {
                  "_source": {
                    "name": "record1",
                  },
                },
                {
                  "_source": {
                    "name": "record2",
                  },
                },
                {
                  "_source": {
                    "name": "record3",
                  },
                },
              ],
              "totalRecords": 3,
            },
            "highlight": false,
            "include": [
              "a",
              "b",
              "c",
            ],
            "key": "results",
            "page": 2,
            "pageSize": 3,
            "skipCount": true,
            "sortDir": "desc",
            "sortField": "a",
            "totalPages": 1,
            "type": "results",
          },
        ],
        "join": "and",
        "key": "root-parent",
        "schema": undefined,
        "type": "group",
      },
    },
  ],
}
`;
